--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
     display: grid;
     grid-template-rows: 60px 1fr;
     grid-auto-columns: 2fr 10fr;
-    grid-gap: 10px;
+    grid-gap: 0px;
     grid-template-areas:
           'h h'
   'n c';
@@ -12,4 +12,5 @@
 
 .app-wrapper-content {
     background-color: #379683 ;
+    min-height: 100vh;
 }
