--- a/src/Components/Dialogs/Dialogs.module.css
+++ b/src/Components/Dialogs/Dialogs.module.css
@@ -2,9 +2,10 @@
     display: grid;
     grid-template-columns: 2fr 10fr;
     gap: 50px;
+    color: #00213a;
 }
 .dialogs{
-    padding: 10px;
+    padding: 10px;;
 }
 .dialogs .active{
     color: gold;
