--- a/src/Components/Dialogs/Dialogs.module.css
+++ b/src/Components/Dialogs/Dialogs.module.css
@@ -11,10 +11,11 @@
     color: gold;
 }
 .messages{
+    margin: 10px;
     padding: 10px;
+    background-color: white;
 }
 .formDiv{
-    display: flex;
     gap: 10px;
     justify-content: center;
     margin: 10px;
@@ -22,8 +23,11 @@
 .sendInput{
     width: 400px;
 }
-.sendButton{
+.submitButton{
     width: 150px;
     background-color: #557A95;
     border: none;
+}
+.addMessageForm{
+    margin-left: 21%;
 }
